--- a/build.xml
+++ b/build.xml
@@ -13,6 +13,21 @@
 
     </target>
 
+    <target name="test">
+        <junit printsummary="yes" fork="yes" haltonfailure="yes">
+            <classpath location="/Applications/IntelliJ IDEA CE.app/Contents/lib/junit-4.12.jar" />
+            <classpath location="/Applications/IntelliJ IDEA CE.app/Contents/lib/hamcrest-core-1.3.jar" />
+            <formatter type="plain"/>
+            <formatter type="xml" />
+
+            <batchtest fork="yes" todir="/Users/yehray/IdeaProjects/yugioh/test">
+                <fileset dir="/Users/yehray/IdeaProjects/yugioh/test">
+                    <include name="/Users/yehray/IdeaProjects/yugioh/test/Tests.java" />
+                </fileset>
+            </batchtest>
+        </junit>
+    </target>
+
 
 
 </project>
